@@ -39,8 +39,10 @@
     }
   } else if(isset($readsess)) {
     $cal_info = $phpgw->common->appsession();
+    if(!$cal_info->owner) $cal_info->owner = $phpgw_info["user"]["account_id"];
     $can_edit = true;
   } else {
+    $cal_info->id = 0;
     $cal_info->owner = $phpgw_info["user"]["account_id"];
     $can_edit = true;
 
@@ -82,9 +84,6 @@
   $phpgw->template->set_block("edit_entry_begin","list","edit_entry_end","form_button");
 
   $phpgw->template->set_var("bg_color",$phpgw_info["theme"]["bg_text"]);
-  $phpgw->template->set_var("name_error",lang("You have not entered a\\nBrief Description").".");
-  $phpgw->template->set_var("time_error",lang("You have not entered a\\nvalid time of day."));
-  $phpgw->template->set_var("date_error",lang("You have not entered a\\nvalid date."));
   if($id)
     $phpgw->template->set_var("calendar_action",lang("Calendar - Edit"));
   else
@@ -93,7 +92,7 @@
   if($can_edit) {
     $phpgw->template->set_var("action_url",$phpgw->link("edit_entry_handler.php"));
 
-    $common_hidden = "<input type=\"hidden\" name=\"id\" value=\"".$cal_info->id."\">\n";
+    $common_hidden = "<input type=\"hidden\" name=\"cal[id]\" value=\"".$cal_info->id."\">\n";
 
     $phpgw->template->set_var("common_hidden",$common_hidden);
 
@@ -101,30 +100,30 @@
 
 // Brief Description
     $phpgw->template->set_var("field",lang("Brief Description"));
-    $phpgw->template->set_var("data","<input name=\"name\" size=\"25\" value=\"".$cal_info->name."\">");
+    $phpgw->template->set_var("data","<input name=\"cal[name]\" size=\"25\" value=\"".$cal_info->name."\">");
     $phpgw->template->parse("output","list",True);
 
 // Full Description
     $phpgw->template->set_var("field",lang("Full Description"));
-    $phpgw->template->set_var("data","<textarea name=\"description\" rows=\"5\" cols=\"40\" wrap=\"virtual\">".$cal_info->description."</textarea>");
+    $phpgw->template->set_var("data","<textarea name=\"cal[description]\" rows=\"5\" cols=\"40\" wrap=\"virtual\">".$cal_info->description."</textarea>");
     $phpgw->template->parse("output","list",True);
 
 // Date
     $phpgw->template->set_var("field",lang("Start Date"));
 
-    $day_html = "<select name=\"day\">";
+    $day_html = "<select name=\"cal[day]\">";
     for ($i = 1; $i <= 31; $i++)
       $day_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->datetime,"d")) ? " selected" : "") . ">$i</option>\n";
     $day_html .= "</select>";
 
-    $month_html = "<select name=\"month\">";
+    $month_html = "<select name=\"cal[month]\">";
     for ($i = 1; $i <= 12; $i++) {
       $m = lang(date("F",mktime(0,0,0,$i,1,2000)));
       $month_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->datetime,"n")) ? " selected" : "") . ">$m</option>\n";
     }
     $month_html .= "</select>";
 
-    $year_html = "<select name=\"year\">";
+    $year_html = "<select name=\"cal[year]\">";
     for ($i = (intval($phpgw->common->show_date($cal_info->datetime,"Y")) - 1); $i < (intval($phpgw->common->show_date($cal_info->datetime,"Y")) + 5); $i++) {
       $year_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->datetime,"Y")) ? " selected" : "") . ">$i</option>\n";
     }
@@ -144,10 +143,10 @@
 	$amsel = "checked"; $pmsel = "";
       }
     }
-    $str = "<input name=\"hour\" size=\"2\" VALUE=\"".$phpgw->common->show_date($cal_info->datetime,$hourformat)."\" maxlength=\"2\">:<input name=\"minute\" size=\"2\" value=\"".$phpgw->common->show_date($cal_info->datetime,"i")."\" maxlength=\"2\">";
+    $str = "<input name=\"cal[hour]\" size=\"2\" VALUE=\"".$phpgw->common->show_date($cal_info->datetime,$hourformat)."\" maxlength=\"2\">:<input name=\"cal[minute]\" size=\"2\" value=\"".$phpgw->common->show_date($cal_info->datetime,"i")."\" maxlength=\"2\">";
     if ($phpgw_info["user"]["preferences"]["common"]["timeformat"] == "12") {
-      $str .= "<input type=\"radio\" name=\"ampm\" value=\"am\" $amsel>am";
-      $str .= "<input type=\"radio\" name=\"ampm\" value=\"pm\" $pmsel>pm";
+      $str .= "<input type=\"radio\" name=\"cal[ampm]\" value=\"am\" $amsel>am";
+      $str .= "<input type=\"radio\" name=\"cal[ampm]\" value=\"pm\" $pmsel>pm";
     }
 
 // End Date
@@ -156,19 +155,19 @@
 
     $phpgw->template->set_var("field",lang("End Date"));
 
-    $day_html = "<select name=\"end_day\">";
+    $day_html = "<select name=\"cal[end_day]\">";
     for ($i = 1; $i <= 31; $i++)
       $day_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->edatetime,"d")) ? " selected" : "") . ">$i</option>\n";
     $day_html .= "</select>";
 
-    $month_html = "<select name=\"end_month\">";
+    $month_html = "<select name=\"cal[end_month]\">";
     for ($i = 1; $i <= 12; $i++) {
       $m = lang(date("F",mktime(0,0,0,$i,1,2000)));
       $month_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->edatetime,"n")) ? " selected" : "") . ">$m</option>\n";
     }
     $month_html .= "</select>";
 
-    $year_html = "<select name=\"end_year\">";
+    $year_html = "<select name=\"cal[end_year]\">";
     for ($i = (intval($phpgw->common->show_date($cal_info->edatetime,"Y")) - 1); $i < (intval($phpgw->common->show_date($cal_info->edatetime,"Y")) + 5); $i++) {
       $year_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->edatetime,"Y")) ? " selected" : "") . ">$i</option>\n";
     }
@@ -188,10 +187,10 @@
 	$amsel = "checked"; $pmsel = "";
       }
     }
-    $str = "<input name=\"end_hour\" size=\"2\" VALUE=\"".$phpgw->common->show_date($cal_info->edatetime,$hourformat)."\" maxlength=\"2\">:<input name=\"end_minute\" size=\"2\" value=\"".$phpgw->common->show_date($cal_info->edatetime,"i")."\" maxlength=\"2\">";
+    $str = "<input name=\"cal[end_hour]\" size=\"2\" VALUE=\"".$phpgw->common->show_date($cal_info->edatetime,$hourformat)."\" maxlength=\"2\">:<input name=\"cal[end_minute]\" size=\"2\" value=\"".$phpgw->common->show_date($cal_info->edatetime,"i")."\" maxlength=\"2\">";
     if ($phpgw_info["user"]["preferences"]["common"]["timeformat"] == "12") {
-      $str .= "<input type=\"radio\" name=\"end_ampm\" value=\"am\" $amsel>am";
-      $str .= "<input type=\"radio\" name=\"end_ampm\" value=\"pm\" $pmsel>pm";
+      $str .= "<input type=\"radio\" name=\"cal[end_ampm]\" value=\"am\" $amsel>am";
+      $str .= "<input type=\"radio\" name=\"cal[end_ampm]\" value=\"pm\" $pmsel>pm";
     }
 
     $phpgw->template->set_var("data",$str);
@@ -199,7 +198,7 @@
 
 // Priority
     $phpgw->template->set_var("field",lang("Priority"));
-    $str = "<select name=\"priority\">";
+    $str = "<select name=\"cal[priority]\">";
     $str .= "<option value=\"1\"";
     if($cal_info->priority == 1) $str .= " selected";
     $str .= ">".lang("Low")."</option>";
@@ -214,7 +213,7 @@
     $phpgw->template->parse("output","list",True);
 
     $phpgw->template->set_var("field",lang("Access"));
-    $str = "<select name=\"access\">";
+    $str = "<select name=\"cal[access]\">";
     $str .= "<option value=\"private\"";
     if ($cal_info->access == "private" || ! $id) $str .= " selected";
     $str .= ">".lang("Private")."</option>";
@@ -230,7 +229,7 @@
 
 // Groups
     $phpgw->template->set_var("field",lang("Groups"));
-    $str = "<select name=\"groups[]\" multiple size=\"5\">";
+    $str = "<select name=\"cal[groups[]]\" multiple size=\"5\">";
     $db2 = $phpgw->db;
     $db2->query("SELECT account_lid FROM accounts WHERE account_id=".$cal_info->owner,__LINE__,__FILE__);
     $db2->next_record();
@@ -264,7 +263,7 @@
       $size = 5;
     else
       $size = $db2->num_rows();
-    $str = "<select name=\"participants[]\" multiple size=\"5\">";
+    $str = "<select name=\"cal[participants[]]\" multiple size=\"5\">";
     for ($l=0;$l<count($cal_info->participants);$l++)
       $parts[$cal_info->participants[$l]] = True;
     while ($db2->next_record()) {
@@ -274,7 +273,7 @@
       $str .= ">".$phpgw->common->grab_owner_name($db2->f("account_id"))."</option>";
     }
     $str .= "</select>";
-//    $str .= "<input type=\"hidden\" name=\"participants[]\" value=\"".$phpgw_info["user"]["account_id"]."\">";
+//    $str .= "<input type=\"hidden\" name=\"cal[participants][]\" value=\"".$phpgw_info["user"]["account_id"]."\">";
     $phpgw->template->set_var("data",$str);
     $phpgw->template->parse("output","list",True);
 
@@ -288,7 +287,7 @@
 	}
       }
     }
-    $str = "<input type=\"checkbox\" name=\"participants[]\" value=\"".$phpgw_info["user"]["account_id"]."\"";
+    $str = "<input type=\"checkbox\" name=\"cal[participants][]\" value=\"".$phpgw_info["user"]["account_id"]."\"";
     if(($id && $participate) || !$id) {
       $str .= " checked";
     }
@@ -298,7 +297,7 @@
 
 // Repeat Type
     $phpgw->template->set_var("field",lang("Repeat Type"));
-    $str = "<select name=\"rpt_type\">";
+    $str = "<select name=\"cal[rpt_type]\">";
     $rpt_type_str = Array("none","daily","weekly","monthlybyday","monthlybydate","yearly");
     $rpt_type_out = Array("none" => "None", "daily" => "Daily", "weekly" => "Weekly", "monthlybyday" => "Monthly (by day)", "monthlybydate" => "Monthly (by date)", "yearly" => "yearly");
     for($l=0;$l<count($rpt_type_str);$l++) {
@@ -311,23 +310,23 @@
     $phpgw->template->parse("output","list",True);
 
     $phpgw->template->set_var("field",lang("Repeat End Date"));
-    $str = "<input type=\"checkbox\" name=\"rpt_use_end\" value=\"y\"";
+    $str = "<input type=\"checkbox\" name=\"cal[rpt_use_end]\" value=\"y\"";
     if($cal_info->rpt_use_end) $str .= " checked";
     $str .= ">".lang("Use End Date")."  ";
 
-    $day_html = "<select name=\"rpt_day\">";
+    $day_html = "<select name=\"cal[rpt_day]\">";
     for ($i = 1; $i <= 31; $i++)
       $day_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->rpt_end,"d")) ? " selected" : "") . ">$i</option>\n";
     $day_html .= "</select>";
 
-    $month_html = "<select name=\"rpt_month\">";
+    $month_html = "<select name=\"cal[rpt_month]\">";
     for ($i = 1; $i <= 12; $i++) {
       $m = lang(date("F",mktime(0,0,0,$i,1,2000)));
       $month_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->rpt_end,"n")) ? " selected" : "") . ">$m</option>\n";
     }
     $month_html .= "</select>";
 
-    $year_html = "<select name=\"rpt_year\">";
+    $year_html = "<select name=\"cal[rpt_year]\">";
     for ($i = (intval($phpgw->common->show_date($cal_info->rpt_end,"Y")) - 1); $i < (intval($phpgw->common->show_date($cal_info->rpt_end,"Y")) + 5); $i++) {
       $year_html .= "<option value=\"$i\"" . ($i == intval($phpgw->common->show_date($cal_info->rpt_end,"Y")) ? " selected" : "") . ">$i</option>\n";
     }
@@ -338,18 +337,18 @@
     $phpgw->template->parse("output","list",True);
 
     $phpgw->template->set_var("field",lang("Repeat Day")."<br>".lang("(for weekly)"));
-    $str  = "<input type=\"checkbox\" name=\"rpt_sun\" value=\"1\"".($cal_info->rpt_sun?"checked":"")."> ".lang("Sunday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_mon\" value=\"1\"".($cal_info->rpt_mon?"checked":"")."> ".lang("Monday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_tue\" value=\"1\"".($cal_info->rpt_tue?"checked":"")."> ".lang("Tuesday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_wed\" value=\"1\"".($cal_info->rpt_wed?"checked":"")."> ".lang("Wednesday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_thu\" value=\"1\"".($cal_info->rpt_thu?"checked":"")."> ".lang("Thursday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_fri\" value=\"1\"".($cal_info->rpt_fri?"checked":"")."> ".lang("Friday")." ";
-    $str .= "<input type=\"checkbox\" name=\"rpt_sat\" value=\"1\"".($cal_info->rpt_sat?"checked":"")."> ".lang("Saturday")." ";
+    $str  = "<input type=\"checkbox\" name=\"cal[rpt_sun]\" value=\"1\"".($cal_info->rpt_sun?"checked":"")."> ".lang("Sunday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_mon]\" value=\"1\"".($cal_info->rpt_mon?"checked":"")."> ".lang("Monday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_tue]\" value=\"1\"".($cal_info->rpt_tue?"checked":"")."> ".lang("Tuesday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_wed]\" value=\"1\"".($cal_info->rpt_wed?"checked":"")."> ".lang("Wednesday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_thu]\" value=\"1\"".($cal_info->rpt_thu?"checked":"")."> ".lang("Thursday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_fri]\" value=\"1\"".($cal_info->rpt_fri?"checked":"")."> ".lang("Friday")." ";
+    $str .= "<input type=\"checkbox\" name=\"cal[rpt_sat]\" value=\"1\"".($cal_info->rpt_sat?"checked":"")."> ".lang("Saturday")." ";
     $phpgw->template->set_var("data",$str);
     $phpgw->template->parse("output","list",True);
 
     $phpgw->template->set_var("field",lang("Frequency"));
-    $phpgw->template->set_var("data","<input name=\"rpt_freq\" size=\"4\" maxlength=\"4\" value=\"".$cal_info->rpt_freq."\">");
+    $phpgw->template->set_var("data","<input name=\"cal[rpt_freq]\" size=\"4\" maxlength=\"4\" value=\"".$cal_info->rpt_freq."\">");
     $phpgw->template->parse("output","list",True);
 
     $phpgw->template->set_var("submit_button",lang("Submit"));
