@@ -15,6 +15,8 @@
         - Fixed proxy server support for headlines and check for new version on main screen.
         - Fixed headlines preferences and converted headline preferences to a template
 	- Fixed pgsql upgrade from beta path.
+	- Fixed chronological ordering of calendar events.
+	- Changed javascript validation to server side upon submitting calendar events.
 
 [0.9.7] - Fixed SQL error in tts
         - Fixed table locking in admin -> edit account
